--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <groupId>spring</groupId>
     <artifactId>My-Reddit-Clone</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <name>Test-app</name>
     <description>Test-app</description>
     <properties>
