--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=Test-app
 
 ###### Database Properties  ###########################################
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/testdb
-spring.datasource.username=root
+spring.datasource.url=database-1.c7s6io4oqhdl.us-east-1.rds.amazonaws.com
+spring.datasource.username=admin
 spring.datasource.password=passwordz123
 spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
