--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,11 @@ spring.application.name=Test-app
 
 ###### Database Properties  ###########################################
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=database-1.c7s6io4oqhdl.us-east-1.rds.amazonaws.com
+spring.datasource.url=jdbc:mysql://database-1.c7s6io4oqhdl.us-east-1.rds.amazonaws.com:3306/mydatabase
 spring.datasource.username=admin
 spring.datasource.password=passwordz123
 spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 
