--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-s3</artifactId>
+            <version>1.12.713</version>
+        </dependency>
+
 
 
     </dependencies>
