--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.datasource.password=passwordz123
 spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
 spring.jpa.show-sql=true
+
+# AWS S3 CREDENTIALS
+aws.access_key_id=AKIAYF5JH6GUYG25F5HW
+aws.secret_access_key=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
+aws.s3.bucket_name=redditcloneimages
+aws.region=us-east-1
